Add basic title and description

--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Garrett Bachant
+description: This is my personal website and portfolio for programming projects.
